examples/test/testpolicy6576.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6576
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key16: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value17
          key37: value21
      podSelector:
        matchLabels:
          key7: value12
          key5: value23
